--- a/QuickQuestions/app/build.gradle
+++ b/QuickQuestions/app/build.gradle
@@ -6,6 +6,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
 
+    buildFeatures {
+        dataBinding true
+    }
+
     defaultConfig {
         applicationId "com.ess.quickquestions"
         minSdkVersion 24
@@ -37,5 +41,8 @@ dependencies {
 
     //Material Library
     implementation 'com.google.android.material:material:1.2.1'
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
 
 }
