--- a/QuickQuestions/build.gradle
+++ b/QuickQuestions/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
+
+    ext{
+        kotlin_version = "1.4.0"
+        version_lifecycle_extensions = "2.2.0"
+    }
+
     repositories {
         google()
         jcenter()
