Lottie loading icon added and constraint layout added to the sign page

--- a/QuickQuestions/app/build.gradle
+++ b/QuickQuestions/app/build.gradle
@@ -45,4 +45,8 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
 
+    //Lottie Animation
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+
 }
