--- a/QuickQuestions/build.gradle
+++ b/QuickQuestions/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         version_lifecycle_extensions = "2.2.0"
         lottieVersion = "3.4.2"
         firebase_auth = "19.3.2"
+        version_kotlin_coroutines = "1.3.9"
     }
 
     repositories {
