--- a/QuickQuestions/build.gradle
+++ b/QuickQuestions/build.gradle
@@ -5,8 +5,9 @@ buildscript {
         kotlin_version = "1.4.0"
         version_lifecycle_extensions = "2.2.0"
         lottieVersion = "3.4.2"
-        firebase_auth = "19.3.2"
+        firebase_auth = "19.4.0"
         version_kotlin_coroutines = "1.3.9"
+        navigationVersion = "2.3.0"
     }
 
     repositories {
@@ -15,6 +16,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
 
