--- a/QuickQuestions/app/src/main/AndroidManifest.xml
+++ b/QuickQuestions/app/src/main/AndroidManifest.xml
@@ -4,12 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/qqlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/qqlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignActivity"></activity>
         <activity android:name=".MainActivity"/>
 
         <activity
