Remote config added and data fetched

--- a/QuickQuestions/app/build.gradle
+++ b/QuickQuestions/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
     //Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging-ktx'
 
+    //Remote Config
+    implementation 'com.google.firebase:firebase-config-ktx'
+
 }
